[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dependencies = []
name = "pygluon"
version = "0.2.0"
description = "Gluon simulator library for python."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Luca D'Angelo", email = "ldgaetano@protonmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://stability.nexus"

[tool.hatch.build.targets.wheel]
packages = ["src/py_gluon"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
py-gluon = { path = ".", editable = true }

[tool.pixi.tasks]
