[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dependencies = []
name = "pygluon"
version = "1.0.0"
description = "Gluon simulator library for Python. Simulates the Gluon protocol's reactor mechanics including fission, fusion, and beta decay reactions."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Luca D'Angelo", email = "ldgaetano@protonmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://stability.nexus"

[tool.hatch.build.targets.wheel]
packages = ["src/pygluon"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
pygluon = { path = ".", editable = true }

[tool.pixi.tasks]
